feat: add basic page layout

--- a/index.html
+++ b/index.html
@@ -1,7 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>CV Anna Golosova</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <div class="header__container">
+          <nav class="header__menu menu">
+            <ul class="menu__items">
+              <li class="menu__item"><a href="#"></a>Summary</li>
+              <li class="menu__item"><a href="#"></a>Skills</li>
+              <li class="menu__item"><a href="#"></a>Code example</li>
+              <li class="menu__item"><a href="#"></a>Experience</li>
+              <li class="menu__item"><a href="#"></a>Education</li>
+              <li class="menu__item"><a href="#"></a>Language</li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+      <main class="page">
+        <div class="page__container">
+          <div class="page__columns">
+            <div class="page__column">
+              <section class="about"></section>
+              <section class="summary"></section>
+              <section class="language"></section>
+              <section class="education"></section>
+            </div>
+            <div class="page__column">
+              <section class="skills"></section>
+              <section class="code"></section>
+              <section class="experience"></section>
+            </div>
+          </div>
+        </div>
+      </main>
+      <footer class="footer">
+        <div class="footer__container">
+          <ul class="footer__items">
+            <li class="footer__item">2022</li>
+            <li class="footer__item">
+              <a href="#" class="footer__link"></a>
+            </li>
+            <li class="footer__item">
+              <a href="#">
+                <img src="" alt="logo" class="footer__image" />
+              </a>
+            </li>
+          </ul>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
