--- a/index.html
+++ b/index.html
@@ -27,15 +27,73 @@
         <div class="page__container">
           <div class="page__columns">
             <div class="page__column">
-              <section class="about"></section>
-              <section class="summary"></section>
-              <section class="language"></section>
-              <section class="education"></section>
+              <section class="page__about about">
+                <h1 class="about__title">Anna Golosova</h1>
+                <img src="img/photo.jpg" alt="photo" class="about__image" />
+                <ul class="about__items">
+                  <li class="about__item">Pereslavl-Zalessky, Russia</li>
+                  <li class="about__item"><a href="#">Email: golosova76@gmail.ru</a></li>
+                  <li class="about__item"><a href="https://github.com/Golosova76" target="_blank">GitHub</a></li>
+                  <li class="about__item"><a href="https://t.me/golosova76" target="_blank">Telegram</a></li>
+                  <li class="about__item"><a href="https://discordapp.com/users/366629217036664832/" target="_blank">Discord</a></li>
+                </ul>
+              </section>
+              <section class="summary">
+                <h2 class="summary__title">Summary</h2>
+                <p class="summary__text">
+                  My job is related to finances and takes a lot of time. I’m interested in site programming and extremely motivated for
+                  career change goal. I am interested in web development because this profession provides endless opportunities for
+                  professional growth.
+                </p>
+              </section>
+              <section class="language">
+                <h2 class="language__title">Language</h2>
+                <ul class="language__items">
+                  <li class="language__item">Russian - native</li>
+                  <li class="language__item">English -A2</li>
+                </ul>
+              </section>
+              <section class="education">
+                <h2 class="education__title">Education</h2>
+                <ul class="education__items">
+                  <li class="education__item">
+                    Institute of Software Systems (University of Pereslavl) specialty "Applied Informatics in Economics
+                  </li>
+                  <li class="education__item">Course "Freelancer by life" learn to code websites in HTML, CSS and JavaScript</li>
+                  <li class="education__item">RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
+                </ul>
+              </section>
             </div>
             <div class="page__column">
-              <section class="skills"></section>
-              <section class="code"></section>
-              <section class="experience"></section>
+              <section class="skills">
+                <h2 class="skills__title">Skills</h2>
+                <ul class="skills__items">
+                  <li class="skills__item">HTML</li>
+                  <li class="skills__item">CSS</li>
+                  <li class="skills__item">JavaScript</li>
+                  <li class="skills__item">Git, GitHub</li>
+                  <li class="skills__item">Visual Studio Code</li>
+                </ul>
+              </section>
+              <section class="code">
+                <h2 class="code__title">Code example</h2>
+                <p class="code_text">
+                  Convert a string to an array from CODEWARS: Write a function to split a string and convert it into an array of words.
+                </p>
+                <pre>
+                  <code>
+                    function stringToArray(string){
+                      return string.split(" ");
+                    }
+                  </code>
+                </pre>
+              </section>
+              <section class="experience">
+                <h2 class="experience__title">Experience</h2>
+                <a href="https://golosova76.github.io/Lesson_18/" target="_blank" class="experience__link">
+                  Education project,used HTML, CSS и JavaScript.
+                </a>
+              </section>
             </div>
           </div>
         </div>
@@ -45,11 +103,11 @@
           <ul class="footer__items">
             <li class="footer__item">2022</li>
             <li class="footer__item">
-              <a href="#" class="footer__link"></a>
+              <a href="https://github.com/Golosova76" class="footer__link">GitHub</a>
             </li>
             <li class="footer__item">
-              <a href="#">
-                <img src="" alt="logo" class="footer__image" />
+              <a href="https://rs.school/js-stage0" target="_blank">
+                <img src="img/logo.svg" alt="logo" class="footer__image" />
               </a>
             </li>
           </ul>
