feat: add basic page layout and style

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>CV Anna Golosova</title>
   </head>
   <body>
@@ -13,12 +13,12 @@
         <div class="header__container">
           <nav class="header__menu menu">
             <ul class="menu__items">
-              <li class="menu__item"><a href="#"></a>Summary</li>
-              <li class="menu__item"><a href="#"></a>Skills</li>
-              <li class="menu__item"><a href="#"></a>Code example</li>
-              <li class="menu__item"><a href="#"></a>Experience</li>
-              <li class="menu__item"><a href="#"></a>Education</li>
-              <li class="menu__item"><a href="#"></a>Language</li>
+              <li class="menu__item"><a href="#summary">Summary</a></li>
+              <li class="menu__item"><a href="#skills">Skills</a></li>
+              <li class="menu__item"><a href="#example">Code example</a></li>
+              <li class="menu__item"><a href="#experience">Experience</a></li>
+              <li class="menu__item"><a href="#education">Education</a></li>
+              <li class="menu__item"><a href="#language">Language</a></li>
             </ul>
           </nav>
         </div>
@@ -38,7 +38,7 @@
                   <li class="about__item"><a href="https://discordapp.com/users/366629217036664832/" target="_blank">Discord</a></li>
                 </ul>
               </section>
-              <section class="summary">
+              <section id="summary" class="summary">
                 <h2 class="summary__title">Summary</h2>
                 <p class="summary__text">
                   My job is related to finances and takes a lot of time. I’m interested in site programming and extremely motivated for
@@ -46,14 +46,14 @@
                   professional growth.
                 </p>
               </section>
-              <section class="language">
+              <section id="language" class="language">
                 <h2 class="language__title">Language</h2>
                 <ul class="language__items">
                   <li class="language__item">Russian - native</li>
                   <li class="language__item">English -A2</li>
                 </ul>
               </section>
-              <section class="education">
+              <section id="education" class="education">
                 <h2 class="education__title">Education</h2>
                 <ul class="education__items">
                   <li class="education__item">
@@ -65,7 +65,7 @@
               </section>
             </div>
             <div class="page__column">
-              <section class="skills">
+              <section id="skills" class="skills">
                 <h2 class="skills__title">Skills</h2>
                 <ul class="skills__items">
                   <li class="skills__item">HTML</li>
@@ -75,7 +75,7 @@
                   <li class="skills__item">Visual Studio Code</li>
                 </ul>
               </section>
-              <section class="code">
+              <section id="example" class="code">
                 <h2 class="code__title">Code example</h2>
                 <p class="code_text">
                   Convert a string to an array from CODEWARS: Write a function to split a string and convert it into an array of words.
@@ -88,7 +88,7 @@
                   </code>
                 </pre>
               </section>
-              <section class="experience">
+              <section id="experience" class="experience">
                 <h2 class="experience__title">Experience</h2>
                 <a href="https://golosova76.github.io/Lesson_18/" target="_blank" class="experience__link">
                   Education project,used HTML, CSS и JavaScript.
