--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <li class="menu__item"><a href="#example">Code example</a></li>
               <li class="menu__item"><a href="#experience">Experience</a></li>
               <li class="menu__item"><a href="#education">Education</a></li>
-              <li class="menu__item"><a href="#language">Language</a></li>
+              <li class="menu__item"><a href="#language">Languages</a></li>
             </ul>
           </nav>
         </div>
@@ -26,13 +26,13 @@
       <main class="page">
         <div class="page__container">
           <div class="page__columns">
-            <div class="page__column">
+            <div class="page__column page__column_color-one">
               <section class="page__about about">
                 <h1 class="about__title">Anna Golosova</h1>
-                <img src="img/photo.jpg" alt="photo" class="about__image" />
+                <img class="about__image" src="img/photo.jpg" alt="photo" />
                 <ul class="about__items">
-                  <li class="about__item">Pereslavl-Zalessky, Russia</li>
-                  <li class="about__item"><a href="#">Email: golosova76@gmail.ru</a></li>
+                  <li class="about__item-loc">Pereslavl-Zalessky, Russia</li>
+                  <li class="about__item"><a href="#">Email: golosova76@gmail.com</a></li>
                   <li class="about__item"><a href="https://github.com/Golosova76" target="_blank">GitHub</a></li>
                   <li class="about__item"><a href="https://t.me/golosova76" target="_blank">Telegram</a></li>
                   <li class="about__item"><a href="https://discordapp.com/users/366629217036664832/" target="_blank">Discord</a></li>
@@ -42,29 +42,27 @@
                 <h2 class="summary__title">Summary</h2>
                 <p class="summary__text">
                   My job is related to finances and takes a lot of time. I’m interested in site programming and extremely motivated for
-                  career change goal. I am interested in web development because this profession provides endless opportunities for
-                  professional growth.
+                  career change goal.
+                </p>
+                <p class="summary__text">
+                  I am interested in web development because this profession provides endless opportunities for professional growth.
                 </p>
               </section>
               <section id="language" class="language">
-                <h2 class="language__title">Language</h2>
+                <h2 class="language__title">Languages</h2>
                 <ul class="language__items">
                   <li class="language__item">Russian - native</li>
                   <li class="language__item">English -A2</li>
                 </ul>
               </section>
-              <section id="education" class="education">
-                <h2 class="education__title">Education</h2>
-                <ul class="education__items">
-                  <li class="education__item">
-                    Institute of Software Systems (University of Pereslavl) specialty "Applied Informatics in Economics
-                  </li>
-                  <li class="education__item">Course "Freelancer by life" learn to code websites in HTML, CSS and JavaScript</li>
-                  <li class="education__item">RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
-                </ul>
+              <section id="experience" class="experience">
+                <h2 class="experience__title">Experience</h2>
+                <a class="experience__link" href="https://golosova76.github.io/Lesson_18/" target="_blank">
+                  Education project,used HTML, CSS и JavaScript.
+                </a>
               </section>
             </div>
-            <div class="page__column">
+            <div class="page__column page__column_color-two">
               <section id="skills" class="skills">
                 <h2 class="skills__title">Skills</h2>
                 <ul class="skills__items">
@@ -80,19 +78,23 @@
                 <p class="code_text">
                   Convert a string to an array from CODEWARS: Write a function to split a string and convert it into an array of words.
                 </p>
-                <pre>
+                <pre class="code_split">
                   <code>
-                    function stringToArray(string){
+                    function stringToArray(string) {
                       return string.split(" ");
                     }
                   </code>
                 </pre>
               </section>
-              <section id="experience" class="experience">
-                <h2 class="experience__title">Experience</h2>
-                <a href="https://golosova76.github.io/Lesson_18/" target="_blank" class="experience__link">
-                  Education project,used HTML, CSS и JavaScript.
-                </a>
+              <section id="education" class="education">
+                <h2 class="education__title">Education</h2>
+                <ul class="education__items">
+                  <li class="education__item">
+                    Institute of Software Systems (University of Pereslavl) specialty "Applied Informatics in Economics
+                  </li>
+                  <li class="education__item">Course "Freelancer by life" learn to code websites in HTML, CSS and JavaScript</li>
+                  <li class="education__item">RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
+                </ul>
               </section>
             </div>
           </div>
@@ -103,11 +105,11 @@
           <ul class="footer__items">
             <li class="footer__item">2022</li>
             <li class="footer__item">
-              <a href="https://github.com/Golosova76" class="footer__link">GitHub</a>
+              <a class="footer__link" href="https://github.com/Golosova76">GitHub</a>
             </li>
             <li class="footer__item">
               <a href="https://rs.school/js-stage0" target="_blank">
-                <img src="img/logo.svg" alt="logo" class="footer__image" />
+                <img class="footer__image" src="img/logo.svg" alt="logo" />
               </a>
             </li>
           </ul>
