fix: change layout for meta, img
fix: change layout for meta, img

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>CV Anna Golosova</title>
   </head>
   <body>
@@ -29,7 +29,7 @@
             <div class="page__column page__column_color-one">
               <section class="page__about about">
                 <h1 class="about__title">Anna Golosova</h1>
-                <img class="about__image" src="img/photo.jpg" alt="photo" />
+                <img class="about__image" src="img/photo.jpg" alt="photo">
                 <ul class="about__items">
                   <li class="about__item-loc">Pereslavl-Zalessky, Russia</li>
                   <li class="about__item"><a href="#">Email: golosova76@gmail.com</a></li>
