--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </li>
             <li class="footer__item">
               <a href="https://rs.school/js-stage0" target="_blank">
-                <img class="footer__image" src="img/logo.svg" alt="logo" />
+                <img class="footer__image" src="img/logo.svg" alt="logo">
               </a>
             </li>
           </ul>
